*** empty log message ***

--- a/_posts/2017-07-07-autopsy.md
+++ b/_posts/2017-07-07-autopsy.md
@@ -11,22 +11,23 @@ explicit: "no"
 block: "no"
 youtube: "0WcgnSJfBL0"
 ---
-Сегодня 7 июля 2017 года. Начнём со вчерашнего дня. Вчера в Варшаве Трамп произнёс речь, в которой упрекнул Россию в неприличном поведении. Сразу возник дружный хор голосов, что это опасный сигнал для Кремля, Трамп надевает образ Рейгана, объявившего некогда СССР Империй и зла, и сделавшего всё, чтобы Восточный блок развалился в экономическом и военном смысле. Кстати, тогда началось всё с Польши, именно она оказалась самым слабым звеном социалистического блока. Но тут надо сразу сделать оговорку: вчерашняя речь Трампа не свидетельствует о смене его курса на компромиссную политику. Польша - это важная точка в Европе, ориентированная на Германию, а сама Германия является бесспорным лидером европейского сообщества. То есть Трамп, делая реверанс Польше, говорит то, что хотели услышать от него, и то, что он был обязан сказать американским критикам: я - не путинский, я категорически против - вот, что имелось в виду. Именно этим Трамп развязал себе руки на сегодняшней встрече с Путиным, обеспечив нужный баланс. Критика России была вчера сдержанной и корректной, и я бы призвал вас, дорогие зрители, воспринимать это как фигуру речи, а не как что либо значимое. 
 
-Лето, как известно, время без новостей. и пресса с восторгом хватается за любое событие как за важнейшие. Сегодня все обсуждают встречу Путина и Трампа. Признаюсь, мне не показалось это событие значимым, встреча - первая, и разговор обычной торговли: говорили про Украину, Сирию, киберпреступность и терроризм - то есть разговор ни о чём. Трамп - не противник Путина, как и весь американский истеблишмент не является противником путинизма. Россия в любом управляемом виде для США лучше неуправляемой своры слабых регионов, способных постоянно создавать гуманитарную катастрофу. Я не понимаю тех, кто верит что американская администрация заинтересована в смещении администрации Путина или даже в замене его на оппозиционера. Это большая трагедия для всего человечества. но это, увы, так. 
+Сегодня 7 июля 2017 года. Начнём со вчерашнего дня. Вчера в Варшаве Трамп произнёс речь, в которой упрекнул Россию в неприличном поведении. Сразу возник дружный хор голосов, что это опасный сигнал для Кремля, Трамп надевает образ Рейгана, объявившего некогда СССР Империй и зла, и сделавшего всё, чтобы Восточный блок развалился в экономическом и военном смысле. Кстати, тогда началось всё с Польши, именно она оказалась самым слабым звеном социалистического блока. Но тут надо сразу сделать оговорку: вчерашняя речь Трампа не свидетельствует о смене его курса на компромиссную политику. Польша — это важная точка в Европе, ориентированная на Германию, а сама Германия является бесспорным лидером европейского сообщества. То есть Трамп, делая реверанс Польше, говорит то, что хотели услышать от него, и то, что он был обязан сказать американским критикам: я — не путинский, я категорически против — вот, что имелось в виду. Именно этим Трамп развязал себе руки на сегодняшней встрече с Путиным, обеспечив нужный баланс. Критика России была вчера сдержанной и корректной, и я бы призвал вас, дорогие зрители, воспринимать это как фигуру речи, а не как что либо значимое. 
 
-Когда-то Фидель кастро пережил 600 покушений: ему подсовывали отравленные сигары, насыпали яд в ботинки и даже закачивали отраву в акваланг. А он всё время раскрывал замыслы врагов и правил 55 лет, пока не передал Кубу в заботливые и нежные руки брата. Кстати, когда в 1991 году к власти в России пришёл Ельцин, США могли забрать Кубу влёгкую, российское руководство тогда даже не пикнуло бы. Но США этого не сделали по одной причине: Кубу пришлось бы присоединять в качестве американского штата. Не сразу, но через какое-то время. Сначала вводить войска и полностью вычищать режим Кастро, проникший в каждую щель народного сознания каждого кубинца. На Кубе 11 млн человек, и большинство из них не готовы ни к жизни, ни к конкуренции. ни к работе в условиях самоответственности. Вот это и была технология Фиделя: проституировать нацию до такой степени, чтобы любое вмешательство в его режим вынуждало вмешивающихся к таким расходам и к таким жертвам, что это становилось невыгодным. Выгоднее было держать Кубу под управлением Фиделя. Эту же технологию полной профанации применили Кимы в Корее, эту же технологию применят Путин. Он сегодня нужнее Трампу, чем кажется. Да, это омерзительно. Но это именно то, что показывает вскрытие. Любая дестабилизация России способна привести к утрате полного контроля за оружием массового поражения, и путинское окружение и сам Путин за счёт этого понимания положения и обеспечивают своё существования, обеспечивают тот портфель, которым они торгуются с Европой, америкой и со всем миром. 
+Лето, как известно, время без новостей. и пресса с восторгом хватается за любое событие как за важнейшие. Сегодня все обсуждают встречу Путина и Трампа. Признаюсь, мне не показалось это событие значимым, встреча — первая, и разговор обычной торговли: говорили про Украину, Сирию, киберпреступность и терроризм — то есть разговор ни о чём. Трамп — не противник Путина, как и весь американский истеблишмент не является противником путинизма. Россия в любом управляемом виде для США лучше неуправляемой своры слабых регионов, способных постоянно создавать гуманитарную катастрофу. Я не понимаю тех, кто верит что американская администрация заинтересована в смещении администрации Путина или даже в замене его на оппозиционера. Это большая трагедия для всего человечества. но это, увы, так. 
 
-Атомная бомба в багажнике автомашины или микроавтобусе - это реальный кошмар, который снится Трампу. И привести такой грузовичок на Таймс-сквер - не такое уж хитрое дело: намного проще чем то, что сделал Бин Ладен с башнями-близнецами. Вот поэтому не следует рассчитывать на внешнее влияние. Россия будет без Путина очень скоро, а вот без путинизма - очень нескоро. И с этим нам нужно жить. Или кликать “черных лебедей”. Только это бесполезно: они птицы вредные, и прилетают сами по себе. А когда зовёшь - ни за что не прилетают. 
+Когда-то Фидель кастро пережил 600 покушений: ему подсовывали отравленные сигары, насыпали яд в ботинки и даже закачивали отраву в акваланг. А он всё время раскрывал замыслы врагов и правил 55 лет, пока не передал Кубу в заботливые и нежные руки брата. Кстати, когда в 1991 году к власти в России пришёл Ельцин, США могли забрать Кубу влёгкую, российское руководство тогда даже не пикнуло бы. Но США этого не сделали по одной причине: Кубу пришлось бы присоединять в качестве американского штата. Не сразу, но через какое-то время. Сначала вводить войска и полностью вычищать режим Кастро, проникший в каждую щель народного сознания каждого кубинца. На Кубе 11 млн человек, и большинство из них не готовы ни к жизни, ни к конкуренции. ни к работе в условиях самоответственности. Вот это и была технология Фиделя: проституировать нацию до такой степени, чтобы любое вмешательство в его режим вынуждало вмешивающихся к таким расходам и к таким жертвам, что это становилось невыгодным. Выгоднее было держать Кубу под управлением Фиделя. Эту же технологию полной профанации применили Кимы в Корее, эту же технологию применят Путин. Он сегодня нужнее Трампу, чем кажется. Да, это омерзительно. Но это именно то, что показывает вскрытие. Любая дестабилизация России способна привести к утрате полного контроля за оружием массового поражения, и путинское окружение и сам Путин за счёт этого понимания положения и обеспечивают своё существования, обеспечивают тот портфель, которым они торгуются с Европой, америкой и со всем миром. 
 
-В разных регионах России полиция разбирается со штабами Навального. В социальных сетях и независимых изданиях на это обращают самое пристальное внимание. Кто-то видит в этом изощрённую технологию Кремля по дополнительной раскрутке Навального, кто-то подтверждение того, что Навальный - основная оппозиционная сила. Я открыл сайт Эхо Москвы и читаю вам первый комментарий под сообщением об обыском в штабах Навального: “Процесс создания гражданского общества в России начался, и начал его Навальный, разбудив не только молодёжь, но и множество людей. Путин - полное ничтожество. а тем более по сравнению с Навальным, поэтому так и бесится, нарушая Конституцию и творя беспредел по закрытию штабов”. Я не пытаюсь в этом споре встать на чью-либо сторону. Попробуем взять аналитический скальпель и сделать надрез. 
+Атомная бомба в багажнике автомашины или микроавтобусе — это реальный кошмар, который снится Трампу. И привести такой грузовичок на Таймс-сквер — не такое уж хитрое дело: намного проще чем то, что сделал Бин Ладен с башнями-близнецами. Вот поэтому не следует рассчитывать на внешнее влияние. Россия будет без Путина очень скоро, а вот без путинизма — очень нескоро. И с этим нам нужно жить. Или кликать «черных лебедей». Только это бесполезно: они птицы вредные, и прилетают сами по себе. А когда зовёшь — ни за что не прилетают. 
 
-Навальный жив и здоров. Его вовсю раскручивает Эхо Москвы. Вышел он через 25 суток отсидки в изоляторе, выпустили его за три часа до встречи Путина с Трампом. На сегодняшний день никакой предвыборной кампании официально в России не объявлено. Никакой политической структуры у Навального нет. Есть Фонд по борьбе с коррупцией и сеть штабов, которые позиционируются именно как предвыборные штабы… Обратите внимание на очевидное лукавство: выборов нет, а штабы - есть. Причём такие, которые можно рассматривать именно как предвыборные, то есть там есть агитматериалы Навальный-2018, что можно рассматривать как предвыборную агитацию кандидата в президенты, незарегистрированного (потому что никто пока не зарегистрирован), кандидата, который по заявлению Центризбиркома не может быть зарегистрирован. 
+В разных регионах России полиция разбирается со штабами Навального. В социальных сетях и независимых изданиях на это обращают самое пристальное внимание. Кто-то видит в этом изощрённую технологию Кремля по дополнительной раскрутке Навального, кто-то подтверждение того, что Навальный — основная оппозиционная сила. Я открыл сайт Эхо Москвы и читаю вам первый комментарий под сообщением об обыском в штабах Навального: «Процесс создания гражданского общества в России начался, и начал его Навальный, разбудив не только молодёжь, но и множество людей. Путин — полное ничтожество. а тем более по сравнению с Навальным, поэтому так и бесится, нарушая Конституцию и творя беспредел по закрытию штабов». Я не пытаюсь в этом споре встать на чью-либо сторону. Попробуем взять аналитический скальпель и сделать надрез. 
 
-Представьте себе картину: какой-нибудь кандидат вроде Навального, Миронова, Зюганова или Пупкина начинает агитацию раньше официального начала избирательной кампании. Конечно, это нечестная игра и заканчивается она серьёзным разбирательством в Центризбиркоме. Хотя вся избирательная игра в России нечестная, но такое поведение является неспортивным. Навальный как юрист прекрасно понимает суть своих действий: его агитационный штабы вообще никакого отношения к выборам не имеют. Это просто пиар. Троллинг. Хайп. Но люди искренне верят, что происходит какая-то политическая борьба. Таким образом лодка раскачивается. Кто раскачивает эту лодку? Очевидно, что делать это может только Кремль. Зачем ему это? Я уже говорил свою версию: нужно обеспечить выборы таким накалом борьбы, чтобы победы преемника Путина - Дюмина, Медведева, Кудрина, да хоть самого Путина - была очень убедительной. А убедительной она должна быть для того, чтобы преемник или сам Путин на четвертом сроке мог принимать крайне непопулярные реформы и иметь огромный запас прочности. То есть нужно убедительная яркая победа в “честной” борьбе. Для этого и нужно создать видимость конкуренции. Вот как раз именно потому, что эта видимость создаётся, я полагаю, что нас ждут большие сюрпризы осенью. Поскольку кроме Навального никаких конкурентов нет, нужно его вывести на выборы, или воспользоваться технологией замены фигуры. Как это делается: в список для голосования включается несколько оппозиционеров, лучше всего - три-четыре, наряду со спойлером и главной фигурой. В результате голоса против главной фигуры размываются и победа в “честной” борьбе достигается в первом туре. Этой технологии столько, сколько вообще существует процедура выборов. 
+Навальный жив и здоров. Его вовсю раскручивает Эхо Москвы. Вышел он через 25 суток отсидки в изоляторе, выпустили его за три часа до встречи Путина с Трампом. На сегодняшний день никакой предвыборной кампании официально в России не объявлено. Никакой политической структуры у Навального нет. Есть Фонд по борьбе с коррупцией и сеть штабов, которые позиционируются именно как предвыборные штабы... Обратите внимание на очевидное лукавство: выборов нет, а штабы — есть. Причём такие, которые можно рассматривать именно как предвыборные, то есть там есть агитматериалы Навальный-2018, что можно рассматривать как предвыборную агитацию кандидата в президенты, незарегистрированного (потому что никто пока не зарегистрирован), кандидата, который по заявлению Центризбиркома не может быть зарегистрирован. 
 
-Другой вопрос: зачем именно сейчас Навальный создал штабы, а не региональные фонды борьбы с коррупцией? Это вопрос, который надо анализировать. Естественно, что штабы будут максимально разгромлены ещё до начала предвыборной кампании, потому что штабы - это троллинг власти, и власть вынуждена отвечать в силу своих внутренних правил игры. Кремль в силу особенностей системы управления не может дать команду “не трогать”, потому что это сломает систему. Потому что команды вообще никакой не даётся. Если бы была дана команда не допускать создания штабов, то их бы и не допустили. Я интересовался технологиями прямого действия и довольно много об этом знаю. Однажды мне удалось поговорить с одним химиком-токсикологом, бывшим директором одного секретного НИИ, который занимался боевыми отравляющими веществами. Так вот всякие сказки, которые рассказывают в Фейсбуке - это туфта: никакие растительные яды, цветочки, после которых нельзя делать зарядку. давным давно не применяются. Всё гораздо хуже. Тот, кто мешает реально, умирает от совершенно очевидных болезней, и комар носа не подточит. Но сначала - теряет возможность спорить, думать, и вообще активничать. И вот полоний как раз в эти вещества не входит: слишком грубо, слишком дорого, слишком опасно. Люди умирают от рака, инсульта, опухоли мозга, инфаркта - что угодно: есть сотни препаратов на любые случаи жизни. К сожалению, нам надо быть реалистами: Навальный сегодня играет в игру, которой мы не знаем. Возможно, что не знает и он. А вот мои предположения в данном случае прозвучат некорректно, но то. что действия полиции против Навального только повышает к нему интерес - это 100%. И то, что это понимают Кириенко и Вайно - тоже 100%. Таким образом вскрытие показывает, что либо они полные дураки, либо это хорошо продуманный план. Третьего не дано. Выводы делайте сами. 
+Представьте себе картину: какой-нибудь кандидат вроде Навального, Миронова, Зюганова или Пупкина начинает агитацию раньше официального начала избирательной кампании. Конечно, это нечестная игра и заканчивается она серьёзным разбирательством в Центризбиркоме. Хотя вся избирательная игра в России нечестная, но такое поведение является неспортивным. Навальный как юрист прекрасно понимает суть своих действий: его агитационный штабы вообще никакого отношения к выборам не имеют. Это просто пиар. Троллинг. Хайп. Но люди искренне верят, что происходит какая-то политическая борьба. Таким образом лодка раскачивается. Кто раскачивает эту лодку? Очевидно, что делать это может только Кремль. Зачем ему это? Я уже говорил свою версию: нужно обеспечить выборы таким накалом борьбы, чтобы победы преемника Путина — Дюмина, Медведева, Кудрина, да хоть самого Путина — была очень убедительной. А убедительной она должна быть для того, чтобы преемник или сам Путин на четвертом сроке мог принимать крайне непопулярные реформы и иметь огромный запас прочности. То есть нужно убедительная яркая победа в «честной» борьбе. Для этого и нужно создать видимость конкуренции. Вот как раз именно потому, что эта видимость создаётся, я полагаю, что нас ждут большие сюрпризы осенью. Поскольку кроме Навального никаких конкурентов нет, нужно его вывести на выборы, или воспользоваться технологией замены фигуры. Как это делается: в список для голосования включается несколько оппозиционеров, лучше всего — три-четыре, наряду со спойлером и главной фигурой. В результате голоса против главной фигуры размываются и победа в «честной» борьбе достигается в первом туре. Этой технологии столько, сколько вообще существует процедура выборов. 
 
-На сегодня всё. Хотите, чтобы мы выходили каждый день? Помогайте нам своей волонтёрской работой и взносами, записывайтесь в группу Пространство смыслов - медиапроект на Фейсбуке, отвечайте на вопросы админа и ждите приглашения в группу. 
+Другой вопрос: зачем именно сейчас Навальный создал штабы, а не региональные фонды борьбы с коррупцией? Это вопрос, который надо анализировать. Естественно, что штабы будут максимально разгромлены ещё до начала предвыборной кампании, потому что штабы — это троллинг власти, и власть вынуждена отвечать в силу своих внутренних правил игры. Кремль в силу особенностей системы управления не может дать команду «не трогать», потому что это сломает систему. Потому что команды вообще никакой не даётся. Если бы была дана команда не допускать создания штабов, то их бы и не допустили. Я интересовался технологиями прямого действия и довольно много об этом знаю. Однажды мне удалось поговорить с одним химиком-токсикологом, бывшим директором одного секретного НИИ, который занимался боевыми отравляющими веществами. Так вот всякие сказки, которые рассказывают в Фейсбуке — это туфта: никакие растительные яды, цветочки, после которых нельзя делать зарядку. давным давно не применяются. Всё гораздо хуже. Тот, кто мешает реально, умирает от совершенно очевидных болезней, и комар носа не подточит. Но сначала — теряет возможность спорить, думать, и вообще активничать. И вот полоний как раз в эти вещества не входит: слишком грубо, слишком дорого, слишком опасно. Люди умирают от рака, инсульта, опухоли мозга, инфаркта — что угодно: есть сотни препаратов на любые случаи жизни. К сожалению, нам надо быть реалистами: Навальный сегодня играет в игру, которой мы не знаем. Возможно, что не знает и он. А вот мои предположения в данном случае прозвучат некорректно, но то. что действия полиции против Навального только повышает к нему интерес — это 100%. И то, что это понимают Кириенко и Вайно — тоже 100%. Таким образом вскрытие показывает, что либо они полные дураки, либо это хорошо продуманный план. Третьего не дано. Выводы делайте сами. 
 
-Спасибо, что смотрели, будьте здоровы. Мы вас любим!
+На сегодня всё. Хотите, чтобы мы выходили каждый день? Помогайте нам своей волонтёрской работой и взносами, записывайтесь в группу Пространство смыслов — медиапроект на Фейсбуке, отвечайте на вопросы админа и ждите приглашения в группу. 
+
+Спасибо, что смотрели, будьте здоровы. Мы вас любим!
