*** empty log message ***

--- a/_posts/2017-07-10-autopsy.md
+++ b/_posts/2017-07-10-autopsy.md
@@ -11,3 +11,15 @@ explicit: "no"
 block: "no"
 youtube: "vPD41c8li2A"
 ---
+Привет! Это «Вскрытие покажет» — ежедневная аналитическая программа на канале «Пространство смыслов» Сегодня 10 июля, а меня зовут Дмитрий Запольский.
+
+Вчера весь рунет был наполнен комментариями о внезапной смерти Антона Носика — блогера и медиаменеджера, который умер в 51 год. И сразу раздались злорадные голоса — ага! Так тебе и надо! Типа собаке — собачья смерть. Действительно, Носик писал много странных текстов, он дразнил аудиторию. Он, как и все нынешнее поколение интернет-деятелей считал, что медиа-пространство живет по своим законам, надевал маску провокатора- клоуна. И наслаждался получаемым эффектом. По сути он был классическим троллем — без оглядки на реальность, на смыслы. В классическом вопросе «Как слово наше отзовется» он видел простой ответ — слово отзовется ростом трафика. И слово отзывалось. Конечно, он был яркой фигурой — создатель нескольких успешных медиа-ресурсов, один из первых блогеров, прославившихся в Рунете. И вот его не стало. Внезапно. И рунет буквально в смятении — он погиб не в катастрофе, не в аварии, не стал жертвой преступления: он умер от остановки сердца. В самом расцвете лет. Молодой мужчина. Ровесник десятков тысяч активистов русского сегмента интернета, живущих сейчас не настоящим, а прошлым и будущим. В уникальных условиях сегодняшнего дня, когда на наших глазах меняется практически все — интернет перестает быть тем окном в будущее, которым он казался, умные люди начинают чувствовать, что интернет можно использовать не для развития человечества, а для регресса. И это намного проще, чем использовать классические медиа. Увы, интернет не делает людей счастливее и успешнее, а мир — лучше. И мы видим сейчас это на многих примерах. Уход Носика — это в какой-то мере символ. Как если бы один из первых создателе железных дорог попал под поезд. Возможно, Носик, как человек глубоко интегрированный в медиа-пространство, ощущал этот процесс и именно это привело его к тому состоянию, когда жить дальше невозможно. Но я бы упомянул еще одну вещь — в комментариях к этому видится шок: слишком он был молод, слишком многие воспринимали его как юношу, как мальчика, как юного человека, у которого впереди — десятилетия. Увы, его смерть заставила осмыслить один прискорбный факт — первое поколение интернет-активистов уже уходит. Интернет, ставший в середине девяностых символом нового века уже не символ,а просто инструмент в разных руках. И зачастую не очень чистых. Интернет — пространство аморальное. Точнее, зеркало аморальности двадцать первого века. Люди не стали лучше. И вряд ли станут. Когда умирает тролль, на его могилу приходят испражняться другие тролли. И если ты выбрал этот путь, ты должен быть готов к этому. Грустный вывод…
+
+В России рухнул крупный банк «Югра». Причем достаточно неожиданно. 180 миллиардов рублей — это огромная сумма, три миллиарда долларов. Крупнейший крах банка за последние годы. Пока неясно в чем причина, что привело к этому — общая экономическая ситуация или конкретные злоупотребления менеджмента. Выводы делать рано. Я не спешу сейчас с анализом этой ситуации, слишком мало фактуры. Югра вообще не выглядел успешным и продуманным банком с самого начала. Возникнув ниоткуда, он занялся экспансией на рынке и агрессивно захватывал свободные углы, вкладывал огромные ресурсы в строительство своих роскошных офисов, а это для России всегда наводит на мысль, что внешний фасад строится для обмана. Думаю, мы вернемся в ближайших программах к этой ситуации и разберем более предметно, поспрашиваем настоящих экспертов и постараемся понять — какие выводы из этого надо сделать.
+
+Продолжается обсуждение кто кого переиграл на встрече Трампа и Путина. Опять в основном это пустая болтовня, каждый видит то, что ему хочется и что ему выгодно. Важно, что обе стороны дурят почтенную публику, как фокусники в цирке: пока Белый дом и Кремль рассуждали сколько времени у каждой стороны выделено на встречу, шла активная работа по подготовке договоренностей по Сирии и Украине. Выведем за скобки ситуацию с кибератаками — дело пока мутное. Хотя мы все в душе уверены, что Кремль вмешивался компьютерными методами в систему выборов США, но вот железных фактов, подтверждающих это нет. И более того, Трампу не выгодно, чтобы эти факты, если они есть — были озвучены. Кто там на кого кричал и кто давал честное пионерское, точнее чекистское, что атаки не было — это не принципиально. Кибервойна идет и это понятно — если есть возможность влияния, она будет использована. Это как и любое оружие — в условиях повальной аморальности оно будет применяться, если это невозможно четко отфиксировать на 100 процентов. Вскрытие показывает — Трамп и Путин имею явные общие цели и ведут торг. Путин получил признание, как актор процесса, можно сказать, что Трамп вернул его в орбиту большой политики самим фактом общения. И сигналом для всех, кто понимает: мы работаем. Сигнал очень скверный: если США согласны терпеть Асада — а разумной альтернативы ему нет. Не потому что он достойный управеленец — он деспот и мразь, а потому что он, как и все его коллеги по созданию угроз — Ким в Северной Корее, Рауль на Кубе, Путин в Москве — незаменим, как заводчик питбулей, разводящий свору злых безумных псов в своей квартире. Если его убрать, то либо надо собачек пристроить (а кто захочет иметь дело с невоспитанными зверюгами, таскающими продукты со стола и гадящими на пол, да еще и кусачими), либо надо их эвтанизировать, то есть попросту усыпить. Но на это не могут согласиться гуманисты. Потому что возникает вопрос — а так ли мешал заводчик? Ну пахло, ну лаяли, ну рычали. Но ведь никого особо не съели! А если и загрызли, то неясно — кто виноват: может быть, жертва сама? И вот в этом пространстве между плохим и ужасным существует наш мир сегодня. Да, это определенный тупик и мы все это ощущаем. Но выхода пока не просматривается. Увы, вскрытие это показывает. Мир нужно учить новым смыслам. И создавать почву для их роста.
+
+Путин в Петербурге ляпнул, что у него есть японский мотоцикл. Пресса мгновенно встрепенулась — в декларации Владимира ничего не сказано о том, что он располагает двухколесным транспортом. Песков поправил — японские мотоциклы есть в гараже особого назначения, то есть кремлевской конюшне. И якобы Путин пробовал на них кататься. Правда это не Мицубиси, а Кавасаки. Ну вот нравится российскому деспоту выпендриваться в свободное время — тянет на экстрим. А чей байк — государственный или его он не особо задумывался — давно все смешалось. Интересный, кстати, момент — говорящий о многом! У Путина все смешалось, он потерял границы личности. Потому что воспринимать государственное как свое — это уже патология. Причем, проанализировав этот момент можно получить важные штрихи к портрету: Человек теряет ощущение реальности. Это скверно. Он экстраполирует свою личность на страну, а страну на себя: чувствуя, что Россия это и есть он. И недаром лизоблюды и сосуны в окружении, говорящие то, что по их мнению Путин хочет услышать. Говорят, что Путин — это и есть Россия. Скверно, господа! Потому что говорят они печальную правду — Россия давно ведет себя, как субъект, страдающий комплексом неполноценности на фоне завышенной самооценки. Или наоборот: комплексом превосходства на фоне заниженной самооценки — это две стороны одной медали. Вскрытие показывает — от этого ничего хорошего ждать не приходится. И в этом смысле личность Путина крайне токсична. Смена его на более гармоничного деспота может действительно быть полезна, если только не придет еще более проблемный в психологическом плане человек.
+
+На сегодня все. Я вас люблю!
+Дмитрий Запольский.
