*** empty log message ***

--- a/_posts/2017-07-21-autopsy.md
+++ b/_posts/2017-07-21-autopsy.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Вскрытие покажет: Путин в "Сириусе" и дебаты Навального"
+title: "Вскрытие покажет: Путин в «Сириусе» и дебаты Навального"
 date: 2017-07-21
 file: 2017-07-21-autopsy
 excerpt: "Сегодня в выпуске: Владимир Путин провел детскую прямую линию; Путин как поп-идол; Навальный и Гиркин: кто кого дебатировал?"
