--- a/_posts/2017-07-12-autopsy.md
+++ b/_posts/2017-07-12-autopsy.md
@@ -3,8 +3,8 @@ layout: post
 title: "Вскрытие покажет: Полонский на свободе, Путин на Валааме"
 date: 2017-07-12
 file: 2017-07-12-autopsy
-excerpt: "Авторская программа Дмитрия Запольского. Сегодня в выпуске: Авантюрист Полонский на свободе; Дебаты Навального и Стрелкова-Гиркина; Новый закон от "Единой России"; Зачем Путин приехал на Валаам."
-summary: "Авторская программа Дмитрия Запольского. Сегодня в выпуске: Авантюрист Полонский на свободе; Дебаты Навального и Стрелкова-Гиркина; Новый закон от "Единой России"; Зачем Путин приехал на Валаам."
+excerpt: "Авторская программа Дмитрия Запольского. Сегодня в выпуске: Авантюрист Полонский на свободе; Дебаты Навального и Стрелкова-Гиркина; Новый закон от «Единой России»; Зачем Путин приехал на Валаам."
+summary: "Авторская программа Дмитрия Запольского. Сегодня в выпуске: Авантюрист Полонский на свободе; Дебаты Навального и Стрелкова-Гиркина; Новый закон от «Единой России»; Зачем Путин приехал на Валаам."
 duration: "00:08:31"
 length: 5100757
 explicit: "no"
